Repair scrollbar

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-*::-webkit-scrollbar {
+.no-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
