--- a/src/styles/pages/login.module.scss
+++ b/src/styles/pages/login.module.scss
@@ -21,6 +21,10 @@
   overflow: scroll;
 }
 
+.rightSideLogin {
+  overflow: hidden;
+}
+
 .brand {
   margin-bottom: 40px;
 }
